[gd_scene load_steps=38 format=2]

[ext_resource path="res://Resources/JoystickRight.png" type="Texture" id=1]
[ext_resource path="res://Resources/bugjam background.png" type="Texture" id=2]
[ext_resource path="res://Resources/BlueButtonSpritesheet.png" type="Texture" id=4]
[ext_resource path="res://Resources/JoystickLeft.png" type="Texture" id=5]
[ext_resource path="res://Cabinet/ArcadeButton.gd" type="Script" id=6]
[ext_resource path="res://Cabinet/CabinetFront.gd" type="Script" id=7]
[ext_resource path="res://Cabinet/ClassPort.gd" type="Script" id=8]
[ext_resource path="res://Cabinet/ClassInputPort.gd" type="Script" id=9]
[ext_resource path="res://Cabinet/ClassOutputPort.gd" type="Script" id=10]
[ext_resource path="res://Cabinet/Joystick.gd" type="Script" id=11]
[ext_resource path="res://Cabinet/Red Button Control.gd" type="Script" id=12]
[ext_resource path="res://Cabinet/Red Button Sprite.gd" type="Script" id=13]
[ext_resource path="res://Resources/JoystickUpright.png" type="Texture" id=14]
[ext_resource path="res://Resources/Button_Yellow_Spritesheet.png" type="Texture" id=15]
[ext_resource path="res://Resources/port.png" type="Texture" id=16]
[ext_resource path="res://Resources/cab background proto.png" type="Texture" id=17]
[ext_resource path="res://Resources/Button_Red_Spritesheet.png" type="Texture" id=18]
[ext_resource path="res://Resources/Button_Green_Spritesheet.png" type="Texture" id=19]
[ext_resource path="res://Subgames/Not_Galaga/NotGalaga.tscn" type="PackedScene" id=20]
[ext_resource path="res://Resources/Button_White_Spritesheet.png" type="Texture" id=21]
[ext_resource path="res://Cabinet/WhiteButtonInput.gd" type="Script" id=22]
[ext_resource path="res://Cabinet/InputButton.gd" type="Script" id=23]
[ext_resource path="res://Cabinet/WhiteWire.gd" type="Script" id=24]
[ext_resource path="res://Cabinet/InputPlug.gd" type="Script" id=25]
[ext_resource path="res://Resources/plug.png" type="Texture" id=26]

[sub_resource type="Environment" id=12]

[sub_resource type="World" id=13]
environment = SubResource( 12 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="InputEventKey" id=4]
scancode = 32

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventKey" id=9]
scancode = 16777221

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 320, 548, 320 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 548, 320 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 40.0

[node name="ArcadeGame" type="Node2D"]
script = ExtResource( 7 )

[node name="The Gamer Scene" type="Node2D" parent="."]
position = Vector2( 656, 0 )

[node name="Cabinet Background" type="Sprite" parent="The Gamer Scene"]
scale = Vector2( 0.5, 0.5 )
z_index = -100
texture = ExtResource( 2 )
centered = false

[node name="Subgame Screen" type="Node2D" parent="The Gamer Scene"]
position = Vector2( 340, 380 )

[node name="ViewportContainer" type="ViewportContainer" parent="The Gamer Scene/Subgame Screen"]
margin_left = -268.0
margin_top = -158.0
margin_right = 212.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( 240, 160 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="The Gamer Scene/Subgame Screen/ViewportContainer"]
size = Vector2( 480, 320 )
own_world = true
world = SubResource( 13 )
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="NotGalaga" parent="The Gamer Scene/Subgame Screen/ViewportContainer/Viewport" instance=ExtResource( 20 )]
position = Vector2( 240, 160 )

[node name="Controllers" type="Node2D" parent="The Gamer Scene"]

[node name="Joystick" type="Node2D" parent="The Gamer Scene/Controllers"]
position = Vector2( 120, 640 )
script = ExtResource( 11 )

[node name="JoystickSprite" type="AnimatedSprite" parent="The Gamer Scene/Controllers/Joystick"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
playing = true

[node name="Red Button" type="Node2D" parent="The Gamer Scene/Controllers"]
position = Vector2( 541.2, 656.986 )

[node name="Red_Button_Control" type="Button" parent="The Gamer Scene/Controllers/Red Button"]
margin_right = 55.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
action_mode = 0
shortcut = SubResource( 5 )
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red Button Sprite" type="Sprite" parent="The Gamer Scene/Controllers/Red Button"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 18 )
centered = false
vframes = 2
frame = 1
script = ExtResource( 13 )

[node name="GreenButton" type="Node2D" parent="The Gamer Scene/Controllers"]
position = Vector2( 560, 600 )
script = ExtResource( 6 )
keyScanCode = 59

[node name="ButtonSprite" type="Sprite" parent="The Gamer Scene/Controllers/GreenButton"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 19 )
vframes = 2
frame = 1

[node name="YellowButton" type="Node2D" parent="The Gamer Scene/Controllers"]
position = Vector2( 480, 620 )
script = ExtResource( 6 )
keyScanCode = 76

[node name="ButtonSprite" type="Sprite" parent="The Gamer Scene/Controllers/YellowButton"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 15 )
vframes = 2
frame = 1

[node name="BlueButton" type="Node2D" parent="The Gamer Scene/Controllers"]
position = Vector2( 400, 640 )
script = ExtResource( 6 )
keyScanCode = 75

[node name="ButtonSprite" type="Sprite" parent="The Gamer Scene/Controllers/BlueButton"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
vframes = 2
frame = 1

[node name="RedButton" type="Node2D" parent="The Gamer Scene/Controllers"]
position = Vector2( 320, 660 )
script = ExtResource( 6 )
keyScanCode = 74

[node name="ButtonSprite" type="Sprite" parent="The Gamer Scene/Controllers/RedButton"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 18 )
vframes = 2
frame = 1

[node name="WhiteButton" type="Button" parent="The Gamer Scene/Controllers"]
margin_left = 258.0
margin_top = 565.0
margin_right = 313.0
margin_bottom = 597.0
rect_clip_content = true
mouse_filter = 2
action_mode = 0
shortcut = SubResource( 10 )
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSprite" type="AnimatedSprite" parent="The Gamer Scene/Controllers/WhiteButton"]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 8 )
centered = false

[node name="Label" type="Label" parent="The Gamer Scene/Controllers/WhiteButton"]
margin_left = 11.0
margin_top = 5.99994
margin_right = 44.0
margin_bottom = 19.9999
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter"

[node name="The Fixer Scene" type="Node2D" parent="."]

[node name="Cabinet Background" type="AnimatedSprite" parent="The Fixer Scene"]
frames = SubResource( 3 )
centered = false

[node name="Wires" type="Node2D" parent="The Fixer Scene"]

[node name="Line2D" type="Line2D" parent="The Fixer Scene/Wires"]

[node name="WhiteWire" type="Node2D" parent="The Fixer Scene/Wires"]
script = ExtResource( 24 )
input = Vector2( 74, 285 )
output = Vector2( 300, 300 )

[node name="Line2D" type="Line2D" parent="The Fixer Scene/Wires/WhiteWire"]
width = 20.0
default_color = Color( 0.952941, 0.956863, 0.976471, 1 )
texture_mode = 2

[node name="InputPlug" type="Node2D" parent="The Fixer Scene/Wires/WhiteWire"]
position = Vector2( 100, 0 )
script = ExtResource( 25 )

[node name="Sprite" type="Sprite" parent="The Fixer Scene/Wires/WhiteWire/InputPlug"]
position = Vector2( 12, 0 )
texture = ExtResource( 26 )

[node name="Area2D" type="Area2D" parent="The Fixer Scene/Wires/WhiteWire/InputPlug"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="The Fixer Scene/Wires/WhiteWire/InputPlug/Area2D"]
shape = SubResource( 11 )

[node name="The Circuit Board" type="Node2D" parent="The Fixer Scene"]

[node name="Ports" type="Node2D" parent="The Fixer Scene/The Circuit Board"]
script = ExtResource( 8 )

[node name="Input-only Ports" type="Node2D" parent="The Fixer Scene/The Circuit Board/Ports"]
script = ExtResource( 9 )

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/Ports/Input-only Ports"]
visible = false
position = Vector2( 51.5, 162.5 )
scale = Vector2( 0.640625, 0.609375 )

[node name="Output-only Ports" type="Node2D" parent="The Fixer Scene/The Circuit Board/Ports"]
script = ExtResource( 10 )

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/Ports/Output-only Ports"]
visible = false
position = Vector2( 593, 166 )
scale = Vector2( 0.640625, 0.609375 )
flip_h = true

[node name="DebugLabel" type="Label" parent="The Fixer Scene/The Circuit Board/Ports/Output-only Ports"]
margin_left = -10.8906
margin_top = -4.875
margin_right = 29.1094
margin_bottom = 9.125
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IO Ports" type="Node2D" parent="The Fixer Scene/The Circuit Board/Ports"]

[node name="Controller Inputs" type="Node2D" parent="The Fixer Scene/The Circuit Board"]

[node name="Red Button Input" type="Node2D" parent="The Fixer Scene/The Circuit Board/Controller Inputs" groups=["InputPort"]]
position = Vector2( 66, 181 )
script = ExtResource( 9 )

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/Controller Inputs/Red Button Input"]
scale = Vector2( 0.640625, 0.609375 )
texture = ExtResource( 16 )

[node name="WhiteInputPort" type="Node2D" parent="The Fixer Scene/The Circuit Board/Controller Inputs" groups=["InputPort"]]
position = Vector2( 67, 259 )
script = ExtResource( 22 )

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/Controller Inputs/WhiteInputPort"]
scale = Vector2( 0.640625, 0.609375 )
texture = ExtResource( 16 )

[node name="DebugLabel" type="Label" parent="The Fixer Scene/The Circuit Board/Controller Inputs/WhiteInputPort"]
margin_left = -17.0
margin_top = -8.0
margin_right = 23.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutputToGame" type="Node2D" parent="The Fixer Scene/The Circuit Board"]

[node name="OutputPortDebug" type="Node2D" parent="The Fixer Scene/The Circuit Board/OutputToGame"]
script = ExtResource( 10 )
initialInputNodePath = "/root/ArcadeGame/The Fixer Scene/The Circuit Board/Controller Inputs/Red Button Input"

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/OutputToGame/OutputPortDebug"]
position = Vector2( 593, 166 )
scale = Vector2( 0.640625, 0.609375 )
texture = ExtResource( 16 )
flip_h = true

[node name="DebugLabel" type="Label" parent="The Fixer Scene/The Circuit Board/OutputToGame/OutputPortDebug"]
margin_left = -10.8906
margin_top = -4.875
margin_right = 29.1094
margin_bottom = 9.125
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteOutputPort" type="Node2D" parent="The Fixer Scene/The Circuit Board/OutputToGame"]
position = Vector2( 582, 367 )
script = ExtResource( 10 )
initialInputNodePath = "/root/ArcadeGame/The Fixer Scene/The Circuit Board/Controller Inputs/WhiteInputPort"

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/OutputToGame/WhiteOutputPort"]
scale = Vector2( 0.640625, 0.609375 )
texture = ExtResource( 16 )
flip_h = true

[node name="DebugLabel" type="Label" parent="The Fixer Scene/The Circuit Board/OutputToGame/WhiteOutputPort"]
margin_left = -10.8906
margin_top = -4.875
margin_right = 29.1094
margin_bottom = 9.125
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel" type="Label" parent="."]
margin_left = 580.0
margin_top = 129.0
margin_right = 620.0
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Gamer Scene/Controllers/Red Button/Red_Button_Control" method="_on_Red_Button_Control_button_down"]
[connection signal="button_down" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Gamer Scene/Controllers/Red Button/Red Button Sprite" method="_on_Red_Button_Control_button_down"]
[connection signal="button_down" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Fixer Scene/The Circuit Board/Controller Inputs/Red Button Input" method="_on_Red_Button_Control_button_down"]
[connection signal="button_up" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Gamer Scene/Controllers/Red Button/Red_Button_Control" method="_on_Red_Button_Control_button_up"]
[connection signal="button_up" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Gamer Scene/Controllers/Red Button/Red Button Sprite" method="_on_Red_Button_Control_button_up"]
[connection signal="button_up" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Fixer Scene/The Circuit Board/Controller Inputs/Red Button Input" method="_on_Red_Button_Control_button_up"]
[connection signal="button_down" from="The Gamer Scene/Controllers/WhiteButton" to="The Gamer Scene/Controllers/WhiteButton" method="_on_WhiteButton_button_down"]
[connection signal="button_down" from="The Gamer Scene/Controllers/WhiteButton" to="The Fixer Scene/The Circuit Board/Controller Inputs/WhiteInputPort" method="_on_WhiteButton_button_down"]
[connection signal="button_up" from="The Gamer Scene/Controllers/WhiteButton" to="The Gamer Scene/Controllers/WhiteButton" method="_on_WhiteButton_button_up"]
[connection signal="button_up" from="The Gamer Scene/Controllers/WhiteButton" to="The Fixer Scene/The Circuit Board/Controller Inputs/WhiteInputPort" method="_on_WhiteButton_button_up"]
[connection signal="input_event" from="The Fixer Scene/Wires/WhiteWire/InputPlug/Area2D" to="The Fixer Scene/Wires/WhiteWire/InputPlug" method="_on_Area2D_input_event"]
